 NEWS/ChangeLog for rJava
--------------------------

0.9-2	(under development)
    o	When NOAWT is set, rJava will enable headless mode in the JVM
	by setting the java.awt.headless property to true during
	initialization in .jinit()

0.9-1	2011-06-28
    o	fixed Java detection from registry on Windows (bug introduced
	in 0.9-0)

0.9-0	2011-06-22
    o	fixes issues introduced by several new features in the late
	0.8 series. Most imporantly .jarray() and .jevalArray() behave
	as intended (and as implemented in previous versions). The
	same applies to .jcall() behavior with respect to arrays and
	its evalArray arument. The defaults for some new arguments
	have been changed to reflect the original behavior.

    o	.jevalArray() has an additional argument `simplify' which allows
	multi-dimensional arrays to be converted to native R
	types. Use with care - it may convert more recursive types in
	the future so it should be used preferrably where you have
	control over the types converted.

    o	fixed a bug in .jevalArray that was not simplifying string
	vectors correctly when the array type was not specified
	(.jclass returns dot notation whereas signatures use JNI
	notation so a conversion was necessary)

    o	use install.libs.R in R 2.13.1 to install multi-arch JRI


0.8-8	2010-12-20
    o	Add support for r.arch in RJavaClassLoader on Windows as well

    o   javaImport was only able to import java packages from the system class
        loader (not from additional jars)

0.8-7	2010-10-18
    o	Windows updates to accomodate changes in R 2.12 and layout
	changes in recent Sun Java installations.

0.8-6	2010-09-17
    o	JRI 0.5-4: rniStop() provides several ways to notify R on unix.
	It improves handing of user interrupts via rniStop() by
	allowing to avoid signals (signals can cause problems in some
	recent JVM implementations).

0.8-5	2010-09-02
    o	fix a bug introduced in 0.8-2 where .jclassPath() would not
	show the real class path
