@@ -1,4 +1,4 @@
 .jmemprof <- function(file = "-") {
   if (is.null(file)) file <- ""
-  invisible(.Call("RJava_set_memprof", as.character(file), PACKAGE="rJava"))
+  invisible(.Call(RJava_set_memprof, as.character(file)))
 }
